# oiio-example

./: .gitmodules  CMakeLists.txt  CMakePresets.json  ReadMe.md  vcpkg.json
.github/workflows/: cmake.yml
libs/: CMakeLists.txt  args.cpp  iterate.cpp  mandel.cpp
libs/include/mandel/: args.h  iterate.h  mandel.h  orbit.h
tests/: CMakeLists.txt  test_args.cpp  test_iterate.cpp  test_mandel.cpp
tools/: CMakeLists.txt  color.cpp  iterate.cpp
